@@ -1,6 +1,6 @@
 // ****************************************************************************
 // 
-// Copyright (C) 2005-2009  Doom9 & al
+// Copyright (C) 2005-2012 Doom9 & al
 // 
 // This program is free software; you can redistribute it and/or modify
 // it under the terms of the GNU General Public License as published by
@@ -147,6 +147,8 @@ namespace MeGUI.core.details
                         return "postponed";
                     case JobStatus.ERROR:
                         return "error";
+                    case JobStatus.ABORTING:
+                        return "aborting";
                     case JobStatus.ABORTED:
                         return "aborted";
                     case JobStatus.DONE:
